--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "noUnusedLocals": true,
     "pretty": true,
     "skipLibCheck": true,
-    "lib": ["es2015", "dom"]
+    "lib": ["es2015"]
   },
   "include": [
     "src"
