--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@types/reflect-metadata": "^0.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.3",
+    "@types/mocha": "^5.2.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.12",
     "ts-node": "^6.0.3",
     "typescript": "^2.8.3"
