Adds test coverage

--- a/package.json
+++ b/package.json
@@ -3,12 +3,39 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "mocha"
-  },
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "build": "tsc",
+    "test": "mocha",
+    "cover": "nyc mocha"
+  },
+  "nyc": {
+    "lines": 70,
+    "statements": 70,
+    "functions": 70,
+    "branches": 70,
+    "include": [
+      "src"
+    ],
+    "exclude": [
+      "test"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "reporter": [
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "sourceMap": true,
+    "instrument": true,
+    "cache": true,
+    "all": true,
+    "check-coverage": true,
+    "report-dir": "./coverage"
+  },
   "dependencies": {
     "@types/node": "^10.1.0",
     "@types/reflect-metadata": "^0.1.0"
@@ -18,7 +45,9 @@
     "@types/mocha": "^5.2.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
+    "nyc": "^11.8.0",
     "reflect-metadata": "^0.1.12",
+    "source-map-support": "^0.5.6",
     "ts-node": "^6.0.3",
     "typescript": "^2.8.3"
   }
