--- a/package.json
+++ b/package.json
@@ -43,10 +43,14 @@
   "devDependencies": {
     "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
+    "@types/sinon": "^5.0.0",
+    "@types/sinon-chai": "^2.7.32",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "nyc": "^11.8.0",
     "reflect-metadata": "^0.1.12",
+    "sinon": "^5.0.10",
+    "sinon-chai": "^3.1.0",
     "source-map-support": "^0.5.6",
     "ts-node": "^6.0.3",
     "typescript": "^2.8.3"
