--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
     "pretty": true,
