--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/sinon": "^5.0.0",
     "@types/sinon-chai": "^2.7.32",
     "chai": "^4.1.2",
+    "codecov": "^3.0.2",
     "mocha": "^5.2.0",
     "nyc": "^11.8.0",
     "reflect-metadata": "^0.1.12",
